# flagger

./: .gitignore  LICENSE  README.md  index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: build.yml
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: App.tsx  FlagEditor.tsx  FlagList.tsx  FractionalEditor.tsx  GlobalMetadata.tsx  JsonPanel.tsx  MetadataEditor.tsx  TargetingCondition.tsx  TargetingEditor.tsx  VariantsEditor.tsx
src/hooks/: useFlags.ts
src/types/: flagd.ts
src/utils/: defaults.ts  export.ts  validation.ts
